--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
   <link rel="stylesheet" href="style/fontface.css">
   <link rel="stylesheet" href="style/style.css">
 
-  <link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick-theme.css" />
+  <link rel="stylesheet" type="text/css"
+    href="node_modules/slick-carousel/slick/slick.css" />
+  <link rel="stylesheet" type="text/css"
+    href="node_modules/slick-carousel/slick/slick-theme.css" />
 
 
   <!-- js -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="module"></script>
-  <script type="text/javascript" src="node_modules/slick-carousel/slick/slick.min.js" type="module"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    type="module"></script>
+  <script type="text/javascript"
+    src="node_modules/slick-carousel/slick/slick.min.js" type="module"></script>
 
   <script src="js/import-jquery.js" type="module"></script>
   <script src="js/test.js" type="module"></script>
@@ -38,13 +42,22 @@
   <div class="titleContainer">
     <div class="titleHolder">
       <a href="index.html">
-        VIKTOR FIDEL
+        viktor fidel
       </a>
     </div>
-    <div class="menuHolder">
+    <div class="titleHolder2">
+      <a href="index.html">
+        _mail
+      </a>
+      <a href="index.html">
+        _ig
+      </a>
+    </div>
+    <!-- <div class="menuHolder">
+
       <a id='projectLink' href="projects.html"></a>
       <a id='funandartLink' href="funandart.html"></a>
-    </div>
+    </div> -->
   </div>
 
   <main data-router-wrapper>
@@ -53,11 +66,11 @@
 
       <div class="buttonContainer">
         <div class="buttonHolder">
-          <div class="buttons button1">VITA</div>
-          <div class="buttons button2">PROJECTS</div>
-          <div class="buttons button3">PICS / VIDS</div>
-          <div class="buttons button4">CONTACT</div>
-          <div class="buttons button5">FUN AND ART</div>
+          <div class="buttons button1">vita</div>
+          <div class="buttons button2">projects</div>
+          <div class="buttons button3">media</div>
+          <div class="buttons button4">contact</div>
+          <!-- <div class="buttons button5">FUN AND ART</div> -->
         </div>
       </div>
 
@@ -68,7 +81,7 @@
           <div class="shadowButtons button2">PROJECTS</div>
           <div class="shadowButtons button3">PICS / VIDS</div>
           <div class="shadowButtons button4">CONTACT</div>
-          <div class="shadowButtons button5">FUN AND ART</div>
+          <!-- <div class="shadowButtons button5">FUN AND ART</div> -->
         </div>
       </div>
 
@@ -76,8 +89,10 @@
 
       <div class="fullHeightVideoContainer">
         <!-- <video id='viktorVideo' src="material/movie-webm.webm" autoplay muted></video> -->
-        <video id='viktorVideo' src="material/videos/viktor1.webm" muted></video>
-        <video id='viktorVideo2' src="material/videos/viktor2.webm" muted></video>
+        <video id='viktorVideo' src="material/videos/viktor1.webm"
+          muted></video>
+        <video id='viktorVideo2' src="material/videos/viktor2.webm"
+          muted></video>
       </div>
 
     </div>
