--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viktor Fidel</title>
 
-  <link rel="stylesheet" href="node_modules/jquery-ui-dist/jquery-ui.css">
+  <link rel="stylesheet" href="./node_modules/jquery-ui-dist/jquery-ui.css">
 
-  <link rel="stylesheet" href="style/fontface.css">
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="./style/fontface.css">
+  <link rel="stylesheet" href="./style/style.css">
 
   <link rel="stylesheet" type="text/css"
-    href="node_modules/slick-carousel/slick/slick.css" />
+    href="./node_modules/slick-carousel/slick/slick.css" />
   <link rel="stylesheet" type="text/css"
-    href="node_modules/slick-carousel/slick/slick-theme.css" />
+    href="./node_modules/slick-carousel/slick/slick-theme.css" />
 
 
   <!-- js -->
@@ -23,9 +23,9 @@
   <script type="text/javascript"
     src="node_modules/slick-carousel/slick/slick.min.js" type="module"></script>
 
-  <script src="js/import-jquery.js" type="module"></script>
-  <script src="js/test.js" type="module"></script>
-  <script src="js/transition.js" type="module"></script>
+  <script src="./js/import-jquery.js" type="module"></script>
+  <script src="./js/test.js" type="module"></script>
+  <script src="./js/transition.js" type="module"></script>
 
 
 
