--- a/index.html
+++ b/index.html
@@ -35,29 +35,44 @@
 
 <body>
 
+  <div class="fullMarqueeHolder">
+    <div class="oneMarqueeElem">
+      digital Viktor F is temporarily on vacation due to maintenance work on the website
+    </div>
+    <div class="oneMarqueeElem">
+      digital Viktor F is temporarily on vacation due to maintenance work on the website
+    </div>
+    <div class="oneMarqueeElem">
+      digital Viktor F is temporarily on vacation due to maintenance work on the website
+    </div>
+  </div>
+
   <div class="weatherButton"></div>
   <div class="weatherBackground"></div>
 
 
   <div class="titleContainer">
+
     <div class="titleHolder">
       <a href="index.html">
         viktor fidel
       </a>
     </div>
+
     <div class="titleHolder2">
       <a href="index.html">
         _mail
       </a>
-      <a href="index.html">
+      <a target="_blank" href="https://www.instagram.com/viktorfidel/">
         _ig
       </a>
     </div>
-    <!-- <div class="menuHolder">
 
+    <!-- <div class="menuHolder">
       <a id='projectLink' href="projects.html"></a>
       <a id='funandartLink' href="funandart.html"></a>
     </div> -->
+
   </div>
 
   <main data-router-wrapper>
@@ -66,31 +81,31 @@
 
       <div class="buttonContainer">
         <div class="buttonHolder">
-          <div class="buttons button1">vita</div>
+          <!-- <div class="buttons button1">vita</div>
           <div class="buttons button2">projects</div>
           <div class="buttons button3">media</div>
-          <div class="buttons button4">contact</div>
+          <div class="buttons button4">contact</div> -->
           <!-- <div class="buttons button5">FUN AND ART</div> -->
         </div>
       </div>
 
 
-      <div class="shadowButtonContainer">
+      <!-- <div class="shadowButtonContainer">
         <div class="buttonHolder">
           <div class="shadowButtons button1">VITA</div>
           <div class="shadowButtons button2">PROJECTS</div>
           <div class="shadowButtons button3">PICS / VIDS</div>
           <div class="shadowButtons button4">CONTACT</div>
-          <!-- <div class="shadowButtons button5">FUN AND ART</div> -->
+          <div class="shadowButtons button5">FUN AND ART</div>
         </div>
-      </div>
+      </div> -->
 
 
 
       <div class="fullHeightVideoContainer">
         <!-- <video id='viktorVideo' src="material/movie-webm.webm" autoplay muted></video> -->
-        <video id='viktorVideo' src="material/videos/viktor1.webm"
-          muted></video>
+        <!-- <video id='viktorVideo' src="material/videos/viktor1.webm"
+          muted></video> -->
         <video id='viktorVideo2' src="material/videos/viktor2.webm"
           muted></video>
       </div>
