--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
     <div class="oneMarqueeElem">
       digital Viktor F is temporarily on vacation due to maintenance work on the website
     </div>
+    <div class="oneMarqueeElem">
+      digital Viktor F is temporarily on vacation due to maintenance work on the website
+    </div>
+    <div class="oneMarqueeElem">
+      digital Viktor F is temporarily on vacation due to maintenance work on the website
+    </div>
   </div>
 
   <div class="weatherButton"></div>
