--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 
     <div class="titleHolder2">
-      <a href="index.html">
+      <a href="mailto:viktorfidel.act@gmail.com">
         _mail
       </a>
       <a target="_blank" href="https://www.instagram.com/viktorfidel/">
